2002-06-01  wakaba <w@suika.fam.cx>

	* Jcode.pm: 
	- Returns minimum charset name.
	- Make-charset "junet" as an alias of ISO-2022-JP.

2002-05-30  wakaba <w@suika.fam.cx>

	* Jcode.pm: New module.