@@ -1,3 +1,7 @@
+2002-06-06  wakaba <w@suika.fam.cx>
+
+	* Jcode.pm: Supports NKF.pm and Unicode::Japanese.pm.
+
 2002-06-01  wakaba <w@suika.fam.cx>
 
 	* Jcode.pm: 
